# ground-robots

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  TODO  docker-compose.yaml
AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/: setup.sh
blender/: full_robot.dae  mobile_robot.blend  mobile_robot.blend1
docs/html/: CONTRIBUTING_8md.html  README_8md.html  __local__setup__util__ps1_8py.html  __local__setup__util__sh_8py.html  __planning__bridge__msgs__s_8ep_8rosidl__typesupport__c_8c.html  __planning__bridge__msgs__s_8ep_8rosidl__typesupport__fastrtps__c_8c.html  __planning__bridge__msgs__s_8ep_8rosidl__typesupport__introspection__c_8c.html  annotated.html  annotated_dup.js  build_2planning__bridge__msgs_2rosidl__adapter_2planning__bridge__msgs_2srv_2CurrentPose_8idl.html  build_2planning__bridge__msgs_2rosidl__adapter_2planning__bridge__msgs_2srv_2CurrentPose_8idl_source.html  build_2planning__bridge__msgs_2rosidl__adapter_2planning__bridge__msgs_2srv_2StartNavigation_8idl.html  build_2planning__bridge__msgs_2rosidl__adapter_2planning__bridge__msgs_2srv_2StartNavigation_8idl_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2msg_2rosidl__generacd412ca056511d35ba9933a268fa3fbe.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2msg_2rosidl__generacd412ca056511d35ba9933a268fa3fbe_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2current__pose_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2current__pose_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____functions_8c.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____functions_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____functions_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____struct_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____struct_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____type__support_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2current__pose____type__support_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____functions_8c.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____functions_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____functions_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____struct_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____struct_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____type__support_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2detail_2start__navigation____type__support_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2start__navigation_8h.html  build_2planning__bridge__msgs_2rosidl__generator__c_2planning__bridge__msgs_2srv_2start__navigation_8h_source.html  build_2planning__bridge__msgs_2rosidl__generator__cpp_2planning__bridge__msgs_2srv_2current__pose_8hpp.html  build_2planning__bridge__msgs_2rosidl__generator__cpp_2planning__bridge__msgs_2srv_2current__pose_8hpp_source.html  build_2planning__bridge__msgs_2rosidl__generator__cpp_2planning__bridge__msgs_2srv_2detail_2current__pose____builder_8hpp.html  build_2planning__bridge__msgs_2rosidl__generator__cpp_2planning__bridge__msgs_2srv_2detail_2current__pose____builder_8hpp_source.html  build_2planning__bridge__msgs_2rosidl__generator__cpp_2planning__bridge__msgs_2srv_2detail_2current__pose____struct_8hpp.html  (+497 more)
docs/latex/: CONTRIBUTING_8md.tex  __local__setup__util__ps1_8py.tex  annotated.tex  (+393 more)
lidar_tracking-20220315T085700Z-001/lidar_tracking/: CMakeLists.txt
lidar_tracking-20220315T085700Z-001/lidar_tracking/include/: MapManager.hh  hardwareparameters.h  lidartracking.h  personitem.h  timer.hpp  utils.hpp
lidar_tracking-20220315T085700Z-001/lidar_tracking/source/: MapManager.cpp  hardwareglobalinterface.cpp  lidartracking.cpp.save  main.cpp
src/: CMakeLists.txt
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/: CMakeLists.txt
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/data/: Povo1_floor1_slam.pgm  Povo1_floor1_slam.yaml
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/include/: MapManager.hh  Navigation.hh  Prediction.hpp  concavehull.h  taskexecutor.h  utils.hpp  voronoi.h  zmq_services.hpp
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/include/fm_planner/: dubins.h  eikonal.hpp  fm2.hpp  gradient.hpp  minheap.hpp  minheap_simple.hpp  planner.hpp  utils.hpp.old
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/source/: Navigation.cpp  Prediction.cpp  Subscriber.cpp  path.cpp  pathpoint.cpp  utils.cpp.old
src/AutonomousNavigation-20220315T083741Z-001/AutonomousNavigation/source/fm_planner/: asyplot.cpp  planner.cpp
src/planning_bridge/: CMakeLists.txt  package.xml
src/planning_bridge/config/: convert.py  waypoints.json  waypoints_dict.json
src/planning_bridge/launch/: planning.launch.py
src/planning_bridge/src/: navigation_client.cpp  pose_server.cpp  ugv_move.cpp  ugv_move_action.cpp  ugv_transporting_uav_move.cpp
src/waypoint_follower/: CMakeLists.txt  package.xml
src/waypoint_follower/src/: waypoint_follower.cpp
(+265 files in other folders)
